# 123snake

./: .gitignore  123-snake.html  Cargo.toml  LICENSE  README.md  build.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: CNAME  index.html
ml/: play_net.py  train_distill.py
solver/: lab-src.html  solver-lab.html  watch.html
src/: eval.rs  game.rs  heuristics.rs  lib.rs  main.rs  ntuple.rs  search.rs  wasm_api.rs
tests/: behavior.rs
